--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,6 +12,10 @@ input, button {
     -webkit-writing-mode: horizontal-tb !important;
 }
 
+.mytext {
+	width: 300px;
+}
+
 center {
     display: block;
     text-align: -webkit-center;
